# reaction_wheel-_testbed

./: OmegaDesired.py  satctrl.py
ControlStructure/: ControlStructure.ino
RW Testbed SImulink/: Attitude_Control_Model_2.slx  Attitude_Control_Model_ECX_Flat22L.slx  Attitude_Control_Model_ECX_Flat22L.slx.original  Attitude_Control_Model_ECX_Flat22L_4Axis.slx  Attitude_Control_Pyramidal_Configuration.slx  Attitude_Control_Pyramidal_Configuration.slx.autosave  Attitude_Control_Pyramidal_Configuration.slx.original  Attitutde_Control_Model.slx  Attitutde_Control_Model.slx.original  CompleteModel_Matfun1.slx  Controller.m  DCMotorModelVideoLecture.slx  DCMotorVL.slx  Feedforward_Controller.slx  Feedforward_Controller.slxc  FeetForward_Controller.mat  IMU2SIM.slx  IMU2SIM.slx.autosave  Model_2711_re.slx  Model_2711_re.slxc  Model_2811.asv  Model_2811.m  Model_2_RWSat.slx  PID_MF.slx  Pyramidal_Config_Model.slx  RWDynamics_DCM.slx  RWDynamics_DCM.slx.original  ReactionWheelDynamicEquation.m  ReactionWheelModel1.m  ReactionWheel_Sim_1.slx  ReactionWheel_Sim_1.slxc  Simscapetut.slx  model_2811_1.slx  reaction_wheel_model.slx  run_FIRST.asv  run_FIRST.m  run_first.slx  run_first.slxc  rw.m  sat_sim2711.m  (+7 more)
SatelliteCodeStruct/: SatelliteCodeStruct.ino
aruco_tracker/: package.xml  setup.py
attitude_control/meshes/: CMakeLists.txt  package.xml  setup.py
attitude_control/meshes/src/: display_stl.py
attitude_node/: package.xml  setup.cfg  setup.py
attitude_node/attitude_node/: MotorControlFeedback  RWattitude_cont.py  aruco_tracker.py  attitude_control.py  bldc_rpi  (+2 more)
